[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
bevy = "0.11.3"
rand = {version="0.7.3", features=["wasm-bindgen"]}
getrandom = { version = "0.2", features = ["js"] }

